cmake_minimum_required(VERSION 3.23)
project(cs2420_inclass)

set(CMAKE_CXX_STANDARD 14)

### Week 1
#add_executable(circle week_1/circle.cpp week_1/circle.h)
#add_executable(time week_1/time.cpp)
#add_executable(circle_template week_1/circle_template.cpp)

## Week 2
#add_executable(pointer week_2/pointer.cpp)
#add_executable(smart_pointer week_2/task.h week_2/smart_pointers.cpp week_2/message.h)
#add_executable(debugger week_2/debugger.cpp)

## Week 3
#add_executable(recursion week_3/recursion.cpp)

## Week 5
#add_executable(main week_5/main.cpp)

# Week 7
add_executable(main week_7/main.cpp)

## Project
#add_executable(project project/hangman.cpp)
